# Cyber-Projects

./: README.md
Hash-crack/: README.md  hashing.py  main.py
Hash-crack/attacks/: bruteforce.py  dictionary.py
Hash-crack/utils/: charset.py
Keylogger/: CHANGELOG.md  README.md  README.md.txt  SECURITY.MD  config.ini  config.py  keyfile.txt  logger.py  main.py  requirements.txt  test_logger.py
Log-analyzer/: .gitingnore  README.md  app.py  app.spec  requirements.txt
Log-analyzer/logs/: sample.txt
Log-analyzer/src/: __init__.py  log_analyzer.py
Log-analyzer/templates/: index.html  results.html
Network-Scanner/: App.py  Changelog  README.md  scanner.py
Network-Scanner/documents/: Changelog
Network-Scanner/static/: terminal_sfx.js
Network-traffic-analyzer/: README.md  app.py  pyproject.toml  pyptoject.toml
Network-traffic-analyzer/anlayzer/: capture.py  detectors.py  pyptoject.toml  stats.py
Network-traffic-analyzer/docs/: IMPLEMENTATION  OVERVIEW
Network-traffic-analyzer/src/netanal/: constatns.py  exceptions.py  export.py  filters.py  main.py  models.py  output.py  parser.py  visualization.py
ReverseShell/: readme.md
ReverseShell-Handler/: readme.md
Simple-Vulnerability-Scanner/: CHANGELOG.md  README.md
Simple-Vulnerability-Scanner/pydepscan/: __init__.py  osv_client.py  pypi_client.py  scanner.py
Simple-Vulnerability-Scanner/pydepscan/parsers/: __init__.py  pyproject_parser.py  requirements_parser.py
Steganography-Tool/: README.md  cli.py  requirements.txt
Steganography-Tool/docs/: Overview.md  decoding.md
Steganography-Tool/stego/: capacity.py  crypto.py  decoder.py  encoder.py  exceptions.py  image_utils.py  lsb.py
